--- a/Embedded_Components/platformio.ini
+++ b/Embedded_Components/platformio.ini
@@ -8,7 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp_wroom_02]
-platform = espressif8266
-board = esp_wroom_02
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
 framework = arduino
+upload_port = /dev/cu.SLAB_USBtoUART
+monitor_port = /dev/cu.SLAB_USBtoUART
+monitor_speed = 9600
