initial code to test RFID

--- a/Embedded_Components/platformio.ini
+++ b/Embedded_Components/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 upload_port = /dev/cu.SLAB_USBtoUART
 monitor_port = /dev/cu.SLAB_USBtoUART
 monitor_speed = 9600
+lib_deps = 
+    https://github.com/Makuna/Rfid134.git
