testing load cell

--- a/Embedded_Components/platformio.ini
+++ b/Embedded_Components/platformio.ini
@@ -17,3 +17,4 @@ monitor_port = /dev/cu.SLAB_USBtoUART
 monitor_speed = 115200
 lib_deps = 
     https://github.com/Makuna/Rfid134.git
+    bogde/HX711
