--- a/Embedded_Components/platformio.ini
+++ b/Embedded_Components/platformio.ini
@@ -18,3 +18,6 @@ monitor_speed = 115200
 lib_deps = 
     https://github.com/Makuna/Rfid134.git
     bogde/HX711
+    https://github.com/knolleary/pubsubclient
+    256dpi/MQTT
+    bblanchon/ArduinoJson
