fixed .gitignore and .ini file

--- a/Embedded_Components/platformio.ini
+++ b/Embedded_Components/platformio.ini
@@ -17,5 +17,7 @@ monitor_port = /dev/cu.SLAB_USBtoUART
 monitor_speed = 115200
 lib_deps = 
     https://github.com/Makuna/Rfid134.git
-    bogde/HX711
     https://github.com/olkal/HX711_ADC.git
+    7semi-solutions/7Semi_SCD4x@1.0.3
+    sensirion/Sensirion I2C SCD4x@1.1.0
+    
